AV-1127: Ensure last dropdown doesnt overlap footer

--- a/modules/ytp-assets-common/src/less/components/advanced_search.less
+++ b/modules/ytp-assets-common/src/less/components/advanced_search.less
@@ -1,6 +1,7 @@
 .advanced-search-container {
   background-color: #fafafa;
   font-size: 16px;
+  margin-bottom: -20px;
 }
 
 .advanced-search-wrapper {
@@ -11,8 +12,8 @@
   margin-bottom: 50px;
 }
 
-#search-options {
-  padding-left: 0;
+.search-options {
+  margin-bottom: 280px;
 }
 
 #search-options-header {
